src/test/resources/semantic/reject/elseStatementVoidType.ul
void main() {
}

void foo() {
    if (bar()) {
    } else {
    }
}

void bar() {
}